# DirectPlayHelper

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  Todo.md
.github/workflows/: cmake.yml
include/: ArgParser.hpp  Client.hpp  ClientRecord.hpp  CustomSink.hpp  DPHMessage.hpp  DPServer.hpp  DirectPlayHelper.hpp  Message.hpp  Server.hpp
include/dp/: addforwardrequest.hpp  base_message.hpp  createplayer.hpp  deleteplayer.hpp  dp.hpp  enumplayer.hpp  enumplayersreply.hpp  enumsessions.hpp  enumsessionsreply.hpp  header.hpp  message.hpp  packedplayer.hpp  ping.hpp  pingreply.hpp  playerinfomask.hpp  requestgroupid.hpp  requestplayerid.hpp  requestplayerreply.hpp  securitydesc.hpp  sessiondesc.hpp  sockaddr.hpp  superenumplayersreply.hpp  superpackedplayer.hpp  transmission.hpp  types.h  unimplemented.h
include/dppl/: DPEnumSessions.hpp  DPMessage.hpp  DPProxyEndpointIDs.hpp  DPProxyMessage.hpp  DPSuperPackedPlayer.hpp  DirectPlayServer.hpp  EndpointIDs.hpp  PacketSniffer.hpp  dp.hpp  dplay.h  interceptor.hpp  message.hpp  proxy.hpp
include/dppl/probe/: host.hpp  join.hpp
include/inet/: IPAddress.hpp  IPConnection.hpp  MasterConnection.hpp  MasterTCPConnection.hpp  ServiceAddress.hpp  Socket.hpp  TCPAcceptor.hpp  TCPConnection.hpp  UDPConnection.hpp  config.hpp.in
include/nathp/: Client.hpp  ClientRecord.hpp  ConnectionRecord.hpp  Packet.hpp  Server.hpp  constants.hpp  messages.hpp  type.hpp
scripts/: build.sh  format.sh  install-dependencies.sh  lint.ps1  lint.sh
scripts/local/: winbuild.bat  winrun.sh
scripts/osx/: build.sh  install-dependencies.sh
scripts/win/: install-dependencies.bat
scripts/windows/: build.bat  install-dependencies.bat  install-dependencies.ps1
src/: ArgParser.cpp  Client.cpp  ClientRecord.cpp  DPHMessage.cpp  DPServer.cpp  DirectPlayHelper.cpp  Message.cpp  Server.cpp  main.cpp
src/dp/: CMakeLists.txt  addforwardrequest.cpp  base_message.cpp  createplayer.cpp  deleteplayer.cpp  enumplayersreply.cpp  enumsessions.cpp  enumsessionsreply.cpp  header.cpp  message.cpp  packedplayer.cpp  ping.cpp  pingreply.cpp  playerinfomask.cpp  requestgroupid.cpp  requestplayerid.cpp  requestplayerreply.cpp  sessiondesc.cpp  superenumplayersreply.cpp  superpackedplayer.cpp  transmission.cpp
src/dppl/: CMakeLists.txt  DPEnumSessions.cpp  DPMessage.cpp  DPProxyMessage.cpp  DPSuperPackedPlayer.cpp  DirectPlayServer.cpp  PacketSniffer.cpp  README.md  interceptor.cpp  message.cpp  proxy.cpp
src/dppl/probe/: host.cpp  join.cpp
src/inet/: CMakeLists.txt  IPAddress.cpp  IPConnection.cpp  MasterConnection.cpp  MasterTCPConnection.cpp  ServiceAddress.cpp  Socket.cpp  TCPAcceptor.cpp  TCPConnection.cpp  UDPConnection.cpp
src/nathp/: CMakeLists.txt  Client.cpp  ClientRecord.cpp  ConnectionRecord.cpp  Packet.cpp  Server.cpp
tests/: CMakeLists.txt
tests/include/: MockServer.hpp
tests/include/dp/: templates.h
tests/include/dppl/: AppSimulator.hpp  dpmsgtmps.h  hardware_test.hpp
tests/include/inet/: TCPAcceptor_test.hpp
tests/include/nathp/assets/: client.hpp  protocol.hpp  server.hpp
tests/src/: ArgParser_test.cpp  ClientRecord_test.cpp  Client_test.cpp  DPHMessage_test.cpp  DPServer_test.cpp  Message_test.cpp  MockServer.cpp  Server_test.cpp  main_test.cpp
tests/src/dp/: addforwardrequest_test.cpp  createplayer_test.cpp  deleteplayer_test.cpp  enumplayersreply_test.cpp  enumsessions_test.cpp  enumsessionsreply_test.cpp  header_test.cpp  message_test.cpp  packedplayer_test.cpp  playerinfomask_test.cpp  requestgroupid_test.cpp  requestplayerid_test.cpp  requestplayerreply_test.cpp  sessiondesc_test.cpp  superenumplayersreply_test.cpp  superpackedplayer_test.cpp  transmission_test.cpp
tests/src/dppl/: AppSimulator.cpp  DPProxyMessage_test.cpp  DPSuperPackedPlayer_test.cpp  DirectPlayServer_test.cpp  PacketSniffer_test.cpp  dplay_size_test.cpp  hardware_test.cpp  interceptor_test.cpp  message_test.cpp  proxy_test.cpp
tests/src/dppl/probe/: host_test.cpp  join_test.cpp
tests/src/inet/: IPAddress_test.cpp  MasterConnection_test.cpp  MasterTCPConnection_test.cpp  ServiceAddress_test.cpp  Socket_test.cpp  TCPAcceptor_test.cpp  TCPConnection_test.cpp  UDPConnection_test.cpp
tests/src/nathp/: ClientRecord_test.cpp  ConnectionRecord_test.cpp  Message_test.cpp  Packet_test.cpp  Protocol_test.cpp  Server_test.cpp
tests/src/nathp/assets/: server.hpp
